--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-APP_NAME=Laravel
+APP_NAME="Vivetix Challange"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -36,7 +36,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=array
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
